[project]
name = "authentrics-examples"
version = "0.1.0"
description = "Authentrics Examples"
requires-python = ">=3.11,<3.14"
dependencies = ["authentrics==0.21.0"]
authors = [
    { name = "Michael Jacobs", email = "michael.jacobs@authentrics.ai" },
    { name = "Bimarsh Neupane", email = "bimarsh.neupane@authentrics.ai" },
    { name = "Sean Hagstrom", email = "sean.hagstrom@authentrics.ai" },
]
readme = { file = "README.md", content-type = "text/markdown" }

[project.optional-dependencies]
torch = ["torch==2.10.0", "torchvision==0.25.0", "pillow==12.1.1"]
hf = [
    "torch==2.10.0",
    "transformers==5.3.0",
    "peft==0.18.1",
    "sentence-transformers==5.3.0",
]
onnx = ["onnx==1.20.1", "onnxruntime-gpu==1.24.3", "pillow==12.1.1"]
all = [
    "torch==2.10.0",
    "torchvision==0.25.0",
    "pillow==12.1.1",
    "transformers==5.3.0",
    "peft==0.18.1",
    "sentence-transformers==5.3.0",
    "onnx==1.20.1",
    "onnxruntime-gpu==1.24.3",
]
